syntax="proto3";

package storehouse_supplier_service;
option go_package="genproto/storehouse_supplier_service";

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

service TenderService {
    rpc CreateTender(CreateTenderRequest) returns (Tender) {}
    rpc GetByIDTender(TenderPrimaryKey) returns (Tender) {}
    rpc GetListTender(GetListTenderRequest) returns (GetListTenderResponse) {}
    rpc UpdateTender(UpdateTenderRequest) returns (Tender) {}
    rpc UpdatePatchTender(UpdatePatchTenderRequest) returns (Tender) {}
    rpc DeleteTender(TenderPrimaryKey) returns (google.protobuf.Empty) {}
}

message TenderPrimaryKey {
    string id = 1;
}

message Tender {
    string id = 1;
    string name = 2;
    string tender_number = 3;
    string date_time = 4;
    string status = 5;
    string created_at = 6;
    string updated_at = 7;
}

message CreateTenderRequest {
    string name = 1;
    string tender_number = 2;
    string date_time = 3;
    string status = 4;
}

message UpdateTenderRequest {
    string id = 1;
    string name = 2;
    string tender_number = 3;
    string date_time = 4;
    string status = 5;
}

message UpdatePatchTenderRequest {
    string id = 1;
    google.protobuf.Struct fields = 2;
}

message GetListTenderRequest {
    int32 limit = 1;
    int32 page = 2;
    string search = 3;
    string where_query = 4;
    google.protobuf.Struct filters = 5;
}

message GetListTenderResponse {
    int32 count = 1;
    repeated Tender tenders = 2;
}
